# rules_test_optimization

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LICENSE-3rdparty.csv  MODULE.bazel  NOTICE  README.md  SECURITY.md  WORKSPACE  bazelw  code-security.datadog.yaml  fixestraits.md
.github/: CODEOWNERS  (+2 more)
examples/multi_service/: .bazelrc  BUILD.bazel  MODULE.bazel  runtests.sh
examples/multi_service/src/go-project/: BUILD.bazel  go.mod  main.go  main_test.go
examples/single_service/: .bazelrc  BUILD.bazel  MODULE.bazel  runtests.ps1  runtests.sh
examples/single_service/src/dotnet-project/: BUILD.bazel  dotnet_test_adapter.bzl  smoke_test.cs
examples/single_service/src/go-project/: BUILD.bazel  go.mod  go.sum  main.go  main_test.go  orchestrion.tool.go  orchestrion.yml
examples/single_service/src/java-project/: BUILD.bazel  HelloTest.java
examples/single_service/src/nodejs-project/: BUILD.bazel  smoke_test.js
examples/single_service/src/python-project/: BUILD.bazel  main.py  main_test.py  pytest_test.py  requirements.in  requirements_lock.txt
modules/dotnet/tests/: BUILD.bazel  test_macro.bzl  test_payloads_selector.bzl  test_selection_utils.bzl
modules/go/: BUILD.bazel  MODULE.bazel  topt_go_extension.bzl  topt_go_infer.bzl  topt_go_orchestrion.bzl  topt_go_test.bzl
modules/go/tests/: BUILD.bazel  example_stub_repo.bzl  go.mod  orchestrion_stub_repo.bzl  test_macro.bzl  test_payloads_selector.bzl  test_selection_utils.bzl
modules/java/: BUILD.bazel  MODULE.bazel  topt_java_infer.bzl  topt_java_test.bzl
modules/java/tests/: BUILD.bazel  example_stub_repo.bzl  test_macro.bzl  test_payloads_selector.bzl  test_selection_utils.bzl
modules/nodejs/: BUILD.bazel  MODULE.bazel  topt_nodejs_infer.bzl  topt_nodejs_test.bzl
modules/nodejs/tests/: BUILD.bazel  test_macro.bzl  test_payloads_selector.bzl  test_selection_utils.bzl
modules/python/: BUILD.bazel  MODULE.bazel  ddtrace_requirements_lock.txt  run_pytest.py  topt_py_infer.bzl  topt_py_test.bzl
modules/python/tests/: BUILD.bazel  consumer_runner_main.py  example_stub_repo.bzl  test_macro.bzl  test_payloads_selector.bzl  test_selection_utils.bzl
modules/ruby/: BUILD.bazel  MODULE.bazel  topt_ruby_infer.bzl  topt_ruby_test.bzl
modules/ruby/tests/: BUILD.bazel  test_macro.bzl  test_payloads_selector.bzl  test_selection_utils.bzl
tools/: BUILD  BUILD.bazel  common_utils.bzl  repositories.bzl  requirements.txt  test_optimization_multi_sync.bzl  test_optimization_sync.bzl  test_optimization_uploader.bzl  test_optimization_uploader_test.bzl  topt_go_infer.bzl  topt_go_test.bzl  validate_payload_schema.py
tools/agent-skills/go-test-optimization-onboarding/: SKILL.md
tools/agent-skills/java-test-optimization-onboarding/: SKILL.md
tools/agent-skills/python-test-optimization-onboarding/: SKILL.md
tools/agent-skills/rules-go-orchestrion-upstream-migration/: SKILL.md
tools/core/: BUILD  BUILD.bazel  __init__.py  common_utils.bzl  test_optimization_context_utils.bzl  test_optimization_doctor.bzl  test_optimization_doctor.py  test_optimization_multi_sync.bzl  test_optimization_sync.bzl  test_optimization_sync_env.bzl  test_optimization_targets.bzl  test_optimization_uploader.bzl  topt_macro_utils.bzl  topt_selection_utils.bzl  topt_test_wrapper.bzl  uploader_bash_runtime.sh.tpl  uploader_bash_template.bzl  uploader_batch_runtime.bat.tpl  uploader_batch_template.bzl  uploader_powershell_runtime.ps1.tpl  uploader_powershell_template.bzl  validate_payload_schema.py
tools/core/schemas/: __init__.py  agentless-schema.yaml  check_schema_parser_parity.py  sync_agentless_schema.py
tools/dev/: BUILD.bazel  __init__.py  benchmark_go_orchestrion_perf.py  check_bazelversion_sync.py  check_disk.sh  check_findings_ledger.py  check_module_versions.py  classify_ci_changes.sh  diff_rules_go_fork.py  dotnet_bootstrap.bzl  export_rules_go_patch_bundle.py  export_rules_go_patch_series.py  go_bootstrap.bzl  java_bootstrap.bzl  lint_uploader_templates.py  materialize_rules_go_patch_tree.py  nodejs_bootstrap.bzl  orchestrion_stub.bzl  print_go_onboarding_pins.go  python_bootstrap.bzl  ruby_bootstrap.bzl  rules_go_patch_series_lib.py  run_rules_go_patch_extended.sh  run_rules_go_patch_smoke.sh  run_rules_go_variant_extended.sh  run_rules_go_variant_smoke.sh  verify_rules_go_patch_series.py  verify_rules_go_variants.py
tools/dotnet/: BUILD
tools/go/: BUILD.bazel  topt_go_infer.bzl  topt_go_test.bzl  workspace_repositories.bzl
tools/java/: BUILD  BUILD.bazel  workspace_repositories.bzl
tools/javascript/: BUILD
tools/onboardingpins/: BUILD.bazel
tools/python/: BUILD  workspace_repositories.bzl
tools/ruby/: BUILD
tools/schemas/: agentless-schema.json  agentless-schema.yaml  sync_agentless_schema.py
tools/tests/: BUILD.bazel  example_stub_repo.bzl  test_common_utils.bzl  test_go_selection_utils.bzl  test_multi_sync_utils.bzl  test_sync_utils.bzl  test_uploader_utils.bzl
tools/tests/core/: BUILD.bazel  test_common_utils.bzl  test_go_bootstrap_utils.bzl  test_java_workspace_repositories_utils.bzl  test_multi_sync_utils.bzl  test_python_workspace_repositories_utils.bzl  test_sync_utils.bzl  test_test_optimization_targets_utils.bzl  test_topt_macro_utils.bzl  test_topt_test_wrapper_utils.bzl  test_uploader_utils.bzl  test_workspace_repositories_utils.bzl
tools/tests/go/: BUILD.bazel  test_macro.bzl  test_selection_utils.bzl
tools/tests/integration/: assert_orchestrion_module_proxy_aquery.py  measure_orchestrion_hello_test_perf.sh  mock_dd_server.py  run_bzlmod_go_integration.sh  run_bzlmod_go_patch_integration.sh  run_mock_server_tests.cmd  run_mock_server_tests.ps1  run_mock_server_tests.sh  run_mock_server_tests_lib.sh  run_workspace_go_integration.sh
tools/tests/python/: BUILD.bazel  run_bazelw_wrapper_test.sh  run_python_tools_test.sh  test_python_tools.py  test_rules_go_patch_tools.py  test_rules_go_variant_tools.py
tools/tests/rules_go_patch_regressions/: README.md
tools/tests/rules_go_variant_regressions/: README.md
(+90 files in other folders)
