# Unless explicitly stated otherwise all files in this repository are licensed under
# the Apache 2.0 License.
#
# This product includes software developed at Datadog
# (https://www.datadoghq.com/) Copyright 2025-Present Datadog, Inc.

# Root package exists to expose repository-level utility files to tests.
exports_files([
    ".bazelversion",
    "bazelw",
])
