module(
    name = "datadog-rules-test-optimization",
    version = "1.0.0",
)

# Platforms is needed for cross-platform test execution detection
bazel_dep(name = "platforms", version = "1.0.0")

# Test utilities for Starlark unit tests
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# Dev-only dependency for in-repo example builds that compile Go targets.
bazel_dep(name = "rules_go", version = "0.59.0", dev_dependency = True)

# Dev-only local wiring for companion module loads from this repository root.
go_bootstrap = use_extension(
    "//tools/dev:go_bootstrap.bzl",
    "go_bootstrap_extension",
    dev_dependency = True,
)
go_bootstrap.local_go_companion(
    name = "datadog-rules-test-optimization-go",
    path = "modules/go",
)
use_repo(go_bootstrap, "datadog-rules-test-optimization-go")

# Dev-only stub repository so //examples/... can be analyzed from this root
# workspace without fetching real Datadog data.
example_stub_repo = use_extension(
    "//tools/tests:example_stub_repo.bzl",
    "example_stub_repo_extension",
    dev_dependency = True,
)
example_stub_repo.example_stub_repo(
    name = "test_optimization_data",
    service_keys = ["go_service", "ruby_service"],
)
use_repo(example_stub_repo, "test_optimization_data")
