# Root tools package.
# Intentionally comment-only: this file acts as a package marker and ownership
# map for subpackages. Keep it present even when no top-level rules are needed.
#
# Runtime-agnostic entrypoints live in subpackages:
# - //tools/core:...
# - //tools/tests:...
# - //tools/dev:...
# Language-specific orchestration belongs in companion modules under
# //modules/<language>/ (for example @datadog-rules-test-optimization-go//:...).
# Go-specific orchestration lives in the companion module:
# - @datadog-rules-test-optimization-go//:...
