module(name = "example-multi-service")

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.39.0")
bazel_dep(name = "datadog-rules-test-optimization", version = "1.0.0")
bazel_dep(name = "datadog-rules-test-optimization-go", version = "1.0.0")

# For local development before BCR publication, pin both modules from git:
# git_override(
#   module_name = "datadog-rules-test-optimization",
#   remote = "https://github.com/DataDog/rules_test_optimization.git",
#   commit = "<commit-sha>",
# )
# git_override(
#   module_name = "datadog-rules-test-optimization-go",
#   remote = "https://github.com/DataDog/rules_test_optimization.git",
#   commit = "<commit-sha>",
#   strip_prefix = "modules/go",
# )

topt_multi = use_extension(
  "@datadog-rules-test-optimization//tools/core:test_optimization_multi_sync.bzl",
  "test_optimization_multi_sync_extension",
)

topt_multi.test_optimization_multi_sync(
  name = "test_optimization_data",
  services = ["go-service", "ruby-service"],
  runtime_name = "go",
  runtime_version = "1.24.0",
  debug = True,
)

use_repo(
  topt_multi,
  "test_optimization_data",
  "test_optimization_data_go_service",
  "test_optimization_data_ruby_service",
)

