module(name = "example-single-service")

bazel_dep(name = "aspect_rules_js", version = "3.0.0-rc5")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "rules_dotnet", version = "0.21.5")
bazel_dep(name = "rules_ruby", version = "0.21.1")
bazel_dep(name = "gazelle", version = "0.39.0")
bazel_dep(name = "datadog-rules-test-optimization", version = "1.0.0")
bazel_dep(name = "datadog-rules-test-optimization-go", version = "1.0.0")
bazel_dep(name = "datadog-rules-test-optimization-python", version = "1.0.0")
bazel_dep(name = "datadog-rules-test-optimization-java", version = "1.0.0")
bazel_dep(name = "datadog-rules-test-optimization-nodejs", version = "1.0.0")
bazel_dep(name = "datadog-rules-test-optimization-dotnet", version = "1.0.0")
bazel_dep(name = "datadog-rules-test-optimization-ruby", version = "1.0.0")

# Run:
#   bazel run @datadog-rules-test-optimization-go//:dd_topt_go_bootstrap
# after adding your Go module files to let Datadog pin Orchestrion and patch
# the managed rules_go override block required by dd_topt_go_test.

# For local development before BCR publication, pin both modules from git:
# git_override(
#   module_name = "datadog-rules-test-optimization",
#   remote = "https://github.com/DataDog/rules_test_optimization.git",
#   commit = "<commit-sha>",
# )
# git_override(
#   module_name = "datadog-rules-test-optimization-go",
#   remote = "https://github.com/DataDog/rules_test_optimization.git",
#   commit = "<commit-sha>",
#   strip_prefix = "modules/go",
# )
# git_override(
#   module_name = "datadog-rules-test-optimization-python",
#   remote = "https://github.com/DataDog/rules_test_optimization.git",
#   commit = "<commit-sha>",
#   strip_prefix = "modules/python",
# )
# git_override(
#   module_name = "datadog-rules-test-optimization-java",
#   remote = "https://github.com/DataDog/rules_test_optimization.git",
#   commit = "<commit-sha>",
#   strip_prefix = "modules/java",
# )
# git_override(
#   module_name = "datadog-rules-test-optimization-nodejs",
#   remote = "https://github.com/DataDog/rules_test_optimization.git",
#   commit = "<commit-sha>",
#   strip_prefix = "modules/nodejs",
# )
# git_override(
#   module_name = "datadog-rules-test-optimization-dotnet",
#   remote = "https://github.com/DataDog/rules_test_optimization.git",
#   commit = "<commit-sha>",
#   strip_prefix = "modules/dotnet",
# )
# git_override(
#   module_name = "datadog-rules-test-optimization-ruby",
#   remote = "https://github.com/DataDog/rules_test_optimization.git",
#   commit = "<commit-sha>",
#   strip_prefix = "modules/ruby",
# )

# Reference language rulesets/toolchains for example targets.
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.22.0")
use_repo(node, "nodejs", "nodejs_host", "nodejs_toolchains")
register_toolchains("@nodejs_toolchains//:all")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(
  name = "dotnet",
  dotnet_version = "8.0.100",
)
use_repo(dotnet, "dotnet_toolchains")
register_toolchains("@dotnet_toolchains//:all")

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
  name = "ruby",
  version = "3.3.9",
)
use_repo(ruby, "ruby", "ruby_toolchains")
register_toolchains("@ruby_toolchains//:all")

go_topt = use_extension(
  "@datadog-rules-test-optimization-go//:topt_go_extension.bzl",
  "test_optimization_go_extension",
)

go_topt.test_optimization_go(
  name = "test_optimization_data",
  # Logical service identifier for Datadog metadata (not language-bound).
  # A single service can include tests from multiple runtimes.
  service = "go-service",
  runtime_version = "1.24.0",
  debug = True,
)

use_repo(go_topt, "test_optimization_data")
