# Unless explicitly stated otherwise all files in this repository are licensed under
# the Apache 2.0 License.
#
# This product includes software developed at Datadog
# (https://www.datadoghq.com/) Copyright 2025-Present Datadog, Inc.

load("@rules_go//go:def.bzl", "go_binary")

exports_files([
    "topt_go_test.bzl",
    "topt_go_infer.bzl",
    "topt_go_extension.bzl",
], visibility = ["//visibility:public"])

go_binary(
    name = "dd_topt_go_bootstrap",
    embed = ["@datadog-rules-test-optimization-go//tools/dd_topt_go_bootstrap:bootstrap_lib"],
    visibility = ["//visibility:public"],
)
