# Unless explicitly stated otherwise all files in this repository are licensed under
# the Apache 2.0 License.
#
# This product includes software developed at Datadog
# (https://www.datadoghq.com/) Copyright 2025-Present Datadog, Inc.

module(
    name = "datadog-rules-test-optimization-go",
    version = "1.0.0",
)

bazel_dep(name = "datadog-rules-test-optimization", version = "1.0.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

local_path_override(
    module_name = "rules_go",
    path = "../../third_party/rules_go_orchestrion_base",
)

# Dev-only stub repository so companion-module tests can resolve
# @test_optimization_data labels without network access.
example_stub_repo = use_extension(
    "//tests:example_stub_repo.bzl",
    "example_stub_repo_extension",
    dev_dependency = True,
)
example_stub_repo.example_stub_repo(
    name = "test_optimization_data",
    service_keys = [
        "go_service",
        "ruby_service",
    ],
)
use_repo(example_stub_repo, "test_optimization_data")
