# Unless explicitly stated otherwise all files in this repository are licensed under
# the Apache 2.0 License.
#
# This product includes software developed at Datadog
# (https://www.datadoghq.com/) Copyright 2025-Present Datadog, Inc.

exports_files(
    [
        "run_pytest.py",
        "topt_py_infer.bzl",
        "topt_py_test.bzl",
    ],
    visibility = ["//visibility:public"],
)
