# Unless explicitly stated otherwise all files in this repository are licensed under
# the Apache 2.0 License.
#
# This product includes software developed at Datadog
# (https://www.datadoghq.com/) Copyright 2025-Present Datadog, Inc.

exports_files([
    "topt_ruby_test.bzl",
    "topt_ruby_infer.bzl",
], visibility = ["//visibility:public"])
