exports_files([
    "common_utils.bzl",
    "schemas/agentless-schema.json",
    "schemas/agentless-schema.yaml",
    "schemas/check_schema_parser_parity.py",
    "schemas/sync_agentless_schema.py",
    "test_optimization_sync.bzl",
    "test_optimization_multi_sync.bzl",
    "test_optimization_uploader.bzl",
    "topt_macro_utils.bzl",
    "topt_selection_utils.bzl",
    "uploader_bash_runtime.sh.tpl",
    "uploader_powershell_runtime.ps1.tpl",
    "uploader_batch_runtime.bat.tpl",
    "validate_payload_schema.py",
], visibility = ["//visibility:public"])
