# Unless explicitly stated otherwise all files in this repository are licensed under
# the Apache 2.0 License.
#
# This product includes software developed at Datadog
# (https://www.datadoghq.com/) Copyright 2025-Present Datadog, Inc.

exports_files([
    "common_utils.bzl",
    "schemas/agentless-schema.json",
    "schemas/agentless-schema.yaml",
    "schemas/check_schema_parser_parity.py",
    "schemas/sync_agentless_schema.py",
    "test_optimization_sync.bzl",
    "test_optimization_multi_sync.bzl",
    "test_optimization_context_utils.bzl",
    "test_optimization_doctor.bzl",
    "test_optimization_doctor.py",
    "test_optimization_targets.bzl",
    "test_optimization_uploader.bzl",
    "topt_test_wrapper.bzl",
    "topt_macro_utils.bzl",
    "topt_selection_utils.bzl",
    "uploader_bash_runtime.sh.tpl",
    "uploader_powershell_runtime.ps1.tpl",
    "uploader_batch_runtime.bat.tpl",
    "validate_payload_schema.py",
], visibility = ["//visibility:public"])
