exports_files([
    "benchmark_go_orchestrion_perf.py",
    "check_bazelversion_sync.py",
    "check_module_versions.py",
    "diff_rules_go_fork.py",
    "export_rules_go_patch_bundle.py",
    "export_rules_go_patch_series.py",
    "dotnet_bootstrap.bzl",
    "go_bootstrap.bzl",
    "java_bootstrap.bzl",
    "lint_uploader_templates.py",
    "materialize_rules_go_patch_tree.py",
    "nodejs_bootstrap.bzl",
    "orchestrion_stub.bzl",
    "python_bootstrap.bzl",
    "rules_go_patch_series_lib.py",
    "ruby_bootstrap.bzl",
    "verify_rules_go_patch_series.py",
], visibility = ["//visibility:public"])
