load("@rules_go//go:def.bzl", "go_binary", "go_library")

exports_files([
    "benchmark_go_orchestrion_perf.py",
    "check_bazelversion_sync.py",
    "check_module_versions.py",
    "diff_rules_go_fork.py",
    "dotnet_bootstrap.bzl",
    "go_bootstrap.bzl",
    "java_bootstrap.bzl",
    "lint_uploader_templates.py",
    "nodejs_bootstrap.bzl",
    "orchestrion_stub.bzl",
    "python_bootstrap.bzl",
    "ruby_bootstrap.bzl",
    "verify_rules_go_variants.py",
], visibility = ["//visibility:public"])

go_library(
    name = "print_go_onboarding_pins_lib",
    srcs = ["print_go_onboarding_pins.go"],
    importpath = "github.com/DataDog/rules_test_optimization/tools/dev/print_go_onboarding_pins",
    visibility = ["//visibility:private"],
    deps = ["//modules/go/tools/onboardingpins"],
)

go_binary(
    name = "print_go_onboarding_pins",
    embed = [":print_go_onboarding_pins_lib"],
    visibility = ["//visibility:public"],
)
