# Stable aggregate entrypoint used by CI and local contributors.
#
# Package-scoped suites:
# - core: //tools/tests/core:tests
# - python: //tools/tests/python:tests
exports_files([
    "example_stub_repo.bzl",
], visibility = ["//visibility:public"])

test_suite(
    name = "tests",
    tests = [
        "//tools/tests/core:tests",
        "//tools/tests/python:tests",
    ],
)
