# Unless explicitly stated otherwise all files in this repository are licensed under
# the Apache 2.0 License.
#
# This product includes software developed at Datadog
# (https://www.datadoghq.com/) Copyright 2025-Present Datadog, Inc.

# Stable aggregate entrypoint used by CI and local contributors.
#
# Package-scoped suites:
# - core: //tools/tests/core:tests
# - python: //tools/tests/python:tests
# - integration: intentionally executed outside Bazel test sandbox via
#   tools/tests/integration/run_mock_server_tests.sh(.ps1) because the harness
#   bootstraps a nested Bazel workspace and validates uploader runtime launchers.
#   CI runs this harness explicitly in .github/workflows/ci.yml.
exports_files([
    "example_stub_repo.bzl",
    "integration/mock_dd_server.py",
], visibility = ["//visibility:public"])

test_suite(
    name = "tests",
    tests = [
        "//tools/tests/core:tests",
        "//tools/tests/python:tests",
    ],
)
